--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,36 @@
 /x64/
 /Debug/
 /Release/
+Launcher/x64/Debug/Launcher.Build.CppClean.log
+Launcher/x64/Debug/Launcher.log
+Launcher/x64/Debug/Launcher.tlog/CL.command.1.tlog
+Launcher/x64/Debug/Launcher.tlog/CL.read.1.tlog
+Launcher/x64/Debug/Launcher.tlog/CL.write.1.tlog
+Launcher/x64/Debug/Launcher.tlog/Launcher.lastbuildstate
+Launcher/x64/Debug/Launcher.tlog/link.command.1.tlog
+Launcher/x64/Debug/Launcher.tlog/link.read.1.tlog
+Launcher/x64/Debug/Launcher.tlog/link.write.1.tlog
+Launcher/x64/Debug/Launcher.vcxproj.FileListAbsolute.txt
+Launcher/x64/Debug/vc142.idb
+Launcher/x64/Debug/vc142.pdb
+Driver/x64/Debug/vc142.pdb
+Driver/x64/Debug/Driver.tlog/signtool.write.1.tlog
+Driver/x64/Debug/Driver.tlog/signtool.timestamp.1.tlog
+Driver/x64/Debug/Driver.tlog/signtool.read.1.tlog
+Driver/x64/Debug/Driver.tlog/signtool.command.1.tlog
+Driver/x64/Debug/Driver.tlog/link.write.1.tlog
+Driver/x64/Debug/Driver.tlog/link.read.1.tlog
+Driver/x64/Debug/Driver.tlog/link.command.1.tlog
+Driver/x64/Debug/Driver.tlog/Driver.lastbuildstate
+Driver/x64/Debug/Driver.tlog/CL.write.1.tlog
+Driver/x64/Debug/Driver.tlog/CL.read.1.tlog
+Driver/x64/Debug/Driver.tlog/CL.command.1.tlog
+Driver/x64/Debug/Driver.log
+Driver/x64/Debug/Driver.Build.CppClean.log
+.vs/kd/v16/.suo
+.vs/kd/v16/Browse.VC.db
+.vs/kd/v16/ipch/AutoPCH/8a3d64e6b5642ba1/KEINTERFACE.ipch
+.vs/kd/v16/ipch/AutoPCH/b87ae48ff699ce7b/DRIVER.ipch
+.vs/kd/v16/ipch/AutoPCH/c34e4caaff4fc2ab/KERNELBHOP.ipch
+.vs/kd/v16/ipch/AutoPCH/fd08547c7d1286ab/LAUNCHER.ipch
+.vs/kd/v16/Solution.VC.db
