--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ Driver/x64/Debug/Driver.Build.CppClean.log
 .vs/kd/v16/ipch/AutoPCH/c34e4caaff4fc2ab/KERNELBHOP.ipch
 .vs/kd/v16/ipch/AutoPCH/fd08547c7d1286ab/LAUNCHER.ipch
 .vs/kd/v16/Solution.VC.db
+.vs/kd/v16/Browse.VC.opendb
+.vs/kd/v16/Solution.VC.db-shm
+.vs/kd/v16/Solution.VC.db-wal
