--- a/Launcher/Launcher.vcxproj
+++ b/Launcher/Launcher.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="KeInterface.h" />
     <ClInclude Include="Macros.h" />
     <ClInclude Include="Offset.h" />
+    <ClInclude Include="String.hpp" />
     <ClInclude Include="Vector3f.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
